Fix ColorSelect buttons not working on tablet

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -114,14 +114,13 @@ html {
 		border:           1px solid @gray-light;
 		background-color: @white;
 
-		overflow: hidden;
-
 		.stripe {
 			height: 12px;
 		}
 
 		.content {
-			padding: 8px;
+			margin:   8px;
+			overflow: hidden;
 		}
 	}
 }
@@ -138,14 +137,15 @@ html {
 		width:  100%;
 		height: 24px;
 
-		.color {
-			width:  25%;
-			height: 100%;
+		.color-button {
+			width:   25%;
+			height:  100%;
 			display: inline-block;
 		}
 	}
 }
 
 .dialog-content {
-	padding: 8px;
+	margin:   8px;
+	overflow: hidden;
 }
